--- a/01dataimportclean.Rmd
+++ b/01dataimportclean.Rmd
@@ -2,7 +2,6 @@
 title: "Data Import & Cleaning (study1adults)"
 author: "Adam Stone, PhD" 
 date: '`r format(Sys.Date(), "%m-%d-%Y")`'
-#date: "September 4, 2017"
 output:
   github_document:
     toc: yes
@@ -97,13 +96,13 @@ data <- read_csv('finaladultdata.csv', col_types=
 select(data,-participant)
 ```
 
-Remove dropped participants (they have no main group name, or no data, or are bad). I'm also removing Sara for now due to her weird data file. These are who we dropped. 
+Remove dropped participants (they have no main group name, or no data, or are bad). These are who we dropped. 
 
 ```{r, message=FALSE, warning=FALSE}
 # Removes those with no maingroup name
 nodata <- filter(data, is.na(maingroup)==TRUE) 
 # Removes those with no data
-manual <- filter(data,participant=="Lucinda" | participant=="Cathy" | participant=="Sara") 
+manual <- filter(data,participant=="Lucinda" | participant=="Cathy" | participant=="Elizabeth") 
 # Make table of all dropped participants
 dropped <- rbind(nodata,manual) %>% arrange(id)
 data <- data %>%
@@ -248,7 +247,7 @@ Now we can easily get group means.
 ```{r}
 groupmeans <- data %>%
   group_by(maingroup) %>%
-  summarize(n = n()/4,
+  dplyr::summarize(n = n()/4,
             age = mean(age),
             selfrate = mean(selfrate),
             signyrs = mean(signyrs),
