--- a/02lexicalrecall.Rmd
+++ b/02lexicalrecall.Rmd
@@ -2,7 +2,6 @@
 title: "Lexical Recall Analysis (study1adults)"
 author: "Adam Stone, PhD" 
 date: '`r format(Sys.Date(), "%m-%d-%Y")`'
-#date: "September 4, 2017"
 output:
   github_document:
     toc: yes
@@ -76,7 +75,7 @@ Lexical recall accuracy violins and error bar charts for forward vs. backward st
 accdata <- data %>%
   ungroup() %>%
   group_by(maingroup,direction) %>%
-  summarize(acc.mean = mean(acc, na.rm=TRUE),
+  dplyr::summarize(acc.mean = mean(acc, na.rm=TRUE),
             acc.sd = sd(acc, na.rm=TRUE))
 
 #Violin plot
@@ -140,7 +139,7 @@ I'm curious if there's any item-level effects we should be watching out for. Bec
 # Run summary stats grouped by story, too
 accdata2 <- data %>%
   group_by(maingroup,story,direction) %>%
-  summarize(acc.mean = mean(acc, na.rm=TRUE),
+  dplyr::summarize(acc.mean = mean(acc, na.rm=TRUE),
             acc.sd = sd(acc, na.rm=TRUE))
 # Boxplot
 # ggplot(data,aes(maingroup,acc,fill=direction)) + 
