--- a/03eyegaze.Rmd
+++ b/03eyegaze.Rmd
@@ -2,7 +2,6 @@
 title: "Eye Gaze Analysis (study1adults)"
 author: "Adam Stone, PhD" 
 date: '`r format(Sys.Date(), "%m-%d-%Y")`'
-#date: "September 4, 2017"
 output:
   github_document:
     toc: yes
@@ -212,9 +211,6 @@ ggplot(data2,aes(x=percent)) +
   ggtitle("Looking percentages of each AOI for each participant for each story - or index for FaceChest")
 ```
 
-### Problem people are Sara G for the reasons below:
-* **Sara G. What is happening...her story sums are still over the limit (one story has 41 s, and no story is more than 37 s). There isn't another Sara G recording hiding somewhere or maybe her scenes are wrong? I'm attaching what I have for her, and from the histograms it's her forehead in Cinderella and eyes in King Midas that seem way out of the ordinary (I highlighted both cells in yellow). **
-
 
 # Big Five AOIs
 > You’ll have to decide how to put the AOIs in an ANOVA. All of them together is too many.  And you cannot put ALL the AOIs in. If they all sum to 100% (which they currently do), then the observations are not independent. Also, you can’t put AOIs that have near-zero values in with AOIs that have super high values, you’ll get whopping significance that is too obvious to reveal anything meaningful. 
@@ -253,7 +249,7 @@ data.big5.subjectinfo <- data.big5 %>%
 # Now collapse data.big5 to subject-level 
 data.big5 <- data.big5 %>%
   group_by(participant,direction,aoi) %>%
-  summarize(percent = mean(percent,na.rm=TRUE))
+  dplyr::summarize(percent = mean(percent,na.rm=TRUE))
 data.big5[data.big5=="NaN"] <- NA
 
 
@@ -276,7 +272,7 @@ ggplot(data.big5) +
 ```{r}
 data.big5.viz <- data.big5 %>%
   group_by(maingroup,direction,aoi) %>%
-  summarize(mean = mean(percent,na.rm=TRUE), sd = sd(percent,na.rm=TRUE))
+  dplyr::summarize(mean = mean(percent,na.rm=TRUE), sd = sd(percent,na.rm=TRUE))
 ggplot(data.big5.viz, aes(x=maingroup,y=mean,color=direction)) +
   geom_point(position=position_dodge(0.5)) +
   geom_errorbar(aes(ymin=mean-sd,ymax=mean+sd),width=0.1,position=position_dodge(0.5)) +
@@ -289,7 +285,7 @@ Or a heat map!
 ```{r}
 data.big5.reduce <- data.big5 %>%
   group_by(maingroup,aoi,direction) %>%
-  summarize(meanlooking = mean(percent, na.rm=TRUE)) %>%
+  dplyr::summarize(meanlooking = mean(percent, na.rm=TRUE)) %>%
   ungroup() %>%
   mutate(aoi = factor(aoi,levels=c("upperchest","chin","mouth","eyes","forehead")))
 ggplot(data.big5.reduce, aes(x = maingroup, y = aoi)) +
@@ -385,7 +381,7 @@ data.face3.subjectinfo <- data.face3 %>%
 # Now collapse data.big5 to subject-level 
 data.face3 <- data.face3 %>%
   group_by(participant,direction,aoi) %>%
-  summarize(percent = mean(percent,na.rm=TRUE))
+  dplyr::summarize(percent = mean(percent,na.rm=TRUE))
 data.face3[data.face3=="NaN"] <- NA
 
 # Join subject info with data.big5 that's now subject-level
@@ -492,7 +488,7 @@ data.lr.subjectinfo <- data.lr %>%
 # Now collapse data.big5 to subject-level 
 data.lr <- data.lr %>%
   group_by(participant,direction,aoi) %>%
-  summarize(percent = mean(percent,na.rm=TRUE))
+  dplyr::summarize(percent = mean(percent,na.rm=TRUE))
 data.lr[data.lr=="NaN"] <- NA
 
 # Join subject info with data.big5 that's now subject-level
